[package]
name = "xorpio"
edition = "2021"
description = "no_std / libc-free bindings for Linux userspace IO"
license = "MIT"
version = "0.0.0"

[dependencies]
syscalls = { version = "0.6.18", default-features = false, features = ["all"] }

[profile.release-example]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug = false